--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body class="bienvenida">
   <div class="nav-container">
     <nav class="nav-links">
+       <img src="img/imagen1.png" class="img1" alt="Logo Plataforma" />
       <a href="#">Acerca de nosotros</a>
       <a href="clases.html">Clases</a>
     </nav>
