--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
 </head>
 <body class="bienvenida">
   <div class="nav-container">
+   
     <nav class="nav-links">
-       <img src="img/imagen1.png" class="img1" alt="Logo Plataforma" />
+      <img src="img/imagen7.png" class="img1" alt="Logo Plataforma" />
+      <div class="nav-link1">
       <a href="#">Acerca de nosotros</a>
-      <a href="clases.html">Clases</a>
+      <a href="clases.html">Escuela de productividad</a>
+      </div>
     </nav>
   </div>
 
@@ -50,7 +53,7 @@
     </section>
 
     <div class="button-container">
-      <button onclick="window.location.href='login.html'">Ingresar a la Plataforma</button>
+      <!-- <button onclick="window.location.href='login.html'">Ingresar a la Plataforma</button> -->
     </div>
   </main>
 </body>
